--- a/blocks/main/main.css
+++ b/blocks/main/main.css
@@ -1,6 +1,8 @@
 .main {
+    position: relative;
     max-width: 880px;
     margin: 0 auto;
+    z-index: 0;
 }
 
 @media screen and (max-width: 900px) {
