--- a/pages/index.css
+++ b/pages/index.css
@@ -21,3 +21,12 @@
 @import url("../blocks/cards/__item-info-title/cards__item-info-title.css");
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
+@import url("../blocks/popup/popup.css");
+@import url("../blocks/popup/__container/popup__container.css");
+@import url("../blocks/popup/__container-info/popup__container-info.css");
+@import url("../blocks/popup/__container-input/popup__container-input.css");
+@import url("../blocks/popup/__container-title/popup__container-title.css");
+@import url("../blocks/popup/__container-btn/popup__container-btn.css");
+@import url("../blocks/popup/__close-icon/popup__close-icon.css");
+@import url("../blocks/popup/__disabled/popup__disabled.css");
+@import url("../blocks/popup/__active/popup__active.css");
