--- a/blocks/popup/__close-icon/popup__close-icon.css
+++ b/blocks/popup/__close-icon/popup__close-icon.css
@@ -1,4 +1,6 @@
 .popup__close-icon {
+    border: none;
+    background: none;
     position: absolute;
     width: 32px;
     height: 32px;
@@ -15,6 +17,5 @@
         width: 20px;
         height: 20px;
         right: 0;
-        top: -35px;
     }
 }
