--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -1,5 +1,5 @@
 .body {
     background-color:#000;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-weight: 400;
 }
