--- a/blocks/popup/__container-btn/popup__container-btn.css
+++ b/blocks/popup/__container-btn/popup__container-btn.css
@@ -9,6 +9,10 @@
     cursor: pointer;
 }
 
+.popup__container-btn:hover {
+    opacity: 0.8;
+}
+
 @media screen and (min-width: 320px) and (max-width: 625px) {
     .popup__container-btn {
         font-size: 14px;
