--- a/blocks/popup/__container-input/popup__container-input.css
+++ b/blocks/popup/__container-input/popup__container-input.css
@@ -18,3 +18,10 @@
 .popup__container-input:first-child {
     margin-bottom: 30px;
 }
+
+
+@media screen and (min-width: 320px) and (max-width: 625px) {
+    .popup__container-input {
+        margin-bottom: 45px;
+    }
+}
