--- a/blocks/popup/__container-title/popup__container-title.css
+++ b/blocks/popup/__container-title/popup__container-title.css
@@ -3,10 +3,13 @@
     font-size: 24px;
     font-weight: 900;
     margin-bottom: 54px;
+    min-width: 358px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 625px) {
     .popup__container-title {
         font-size: 18px;
+        min-width: 238px;
+        margin-bottom: 75px;
     }
 }
