--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,22 +1,19 @@
 .popup__container {
-    position: absolute;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     background-color: #FFFFFF;
-    z-index: 2;
     color: black;
     width: 430px;
-    height: 330px;
+    min-height: 330px;
     border-radius: 10px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 625px) {
     .popup__container {
+        padding: 0;
         width: 282px;
+        height: auto;
     }
 }
