--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,8 +1,3 @@
 .popup {
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    position: fixed;
-    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
 }
