--- a/blocks/profile/__info-btn/profile__info-btn.css
+++ b/blocks/profile/__info-btn/profile__info-btn.css
@@ -1,9 +1,13 @@
 .profile__info-btn {
-    background-image: url("../../../images/profile/addbutton.svg");
+    background: none;
+    background-image: url("../../../images/profile/plus.svg");
+    border: 2px solid #FFFFFF;
+    border-radius: 2px;
     background-position: center;
-    background-size: cover;
+    background-size: 22px 22px;
     width: 150px;
-    height: 50px;
+    min-height: 50px;
+    background-repeat: no-repeat;
     cursor: pointer;
     margin-left: auto;
 }
@@ -17,8 +21,7 @@
 
 @media screen and (min-width: 320px) and (max-width: 625px) {
     .profile__info-btn {
-        background-image: url("../../../images/profile/mobileaddbutton.svg");
+        background-size: 16px 16px;
         width: 282px;
-        height: 50px;
     }
 }
