--- a/blocks/profile/__logo/profile__logo.css
+++ b/blocks/profile/__logo/profile__logo.css
@@ -1,5 +1,7 @@
 .profile__logo {
     width: 120px;
+    height: 120px;
+    object-fit: cover;
     border-radius: 50%;
     margin-right: 30px;
 }
