--- a/blocks/cards/__item-info-title/cards__item-info-title.css
+++ b/blocks/cards/__item-info-title/cards__item-info-title.css
@@ -3,4 +3,8 @@
     padding: 0;
     font-size: 24px;
     font-weight: 900;
+    max-width: 200px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
