--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,8 @@
     max-width: 880px;
     margin: 0 auto;
     padding: 45px 0 40px 0;
-    border-bottom: rgba(84,84,84, 0.7);
+    border-bottom: 1px solid;
+    border-bottom-color: rgba(84,84,84, 0.7);
     margin-bottom: 40px;
 }
 
