--- a/blocks/popup/__container-input/popup__container-input.css
+++ b/blocks/popup/__container-input/popup__container-input.css
@@ -8,6 +8,8 @@
     padding-bottom: 13px;
     margin-bottom: 48px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    box-sizing: border-box;
+    max-height: 27px;
 }
 
 .popup__container-input::placeholder {
