--- a/blocks/profile/__info-header-title/profile__info-header-title.css
+++ b/blocks/profile/__info-header-title/profile__info-header-title.css
@@ -19,5 +19,6 @@
 @media screen and (min-width: 320px) and (max-width: 625px) {
     .profile__info-header-title {
         font-size: 27px;
+        margin-right: 10px;
     }
 }
