--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,5 +1,14 @@
-@media screen and (min-width: 320px) and (max-width: 625px) {
-    .profile__info {
-        text-align: center;
-    }
+.profile__info {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+@media screen and (min-width: 320px) and (max-width: 879px) {
+  .profile__info {
+    flex-direction: column;
+    margin-bottom: 26px;
+  }
 }
