--- a/blocks/profile/__btn/profile__btn.css
+++ b/blocks/profile/__btn/profile__btn.css
@@ -1,4 +1,4 @@
-.profile__info-btn {
+.profile__btn {
     background: none;
     background-image: url("../../../images/profile/plus.svg");
     border: 2px solid #FFFFFF;
@@ -10,17 +10,15 @@
     background-repeat: no-repeat;
     cursor: pointer;
     margin-left: auto;
+    box-sizing: border-box;
+
+    width: 150px;
+    height: 50px;
 }
 
-@media screen and (max-width: 825px) {
-    .profile__info-btn {
-        width: 120px;
-        height: 40px;
-    }
-}
 
-@media screen and (min-width: 320px) and (max-width: 625px) {
-    .profile__info-btn {
+@media screen and (min-width: 320px) and (max-width: 879px) {
+    .profile__btn {
         background-size: 16px 16px;
         width: 282px;
     }
