--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,13 +1,18 @@
 .profile {
-    display: flex;
-    align-items: center;
+    max-width: 880px;
+    padding: 0;
+    margin: 0 auto;
     margin-bottom: 50px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
 }
 
-@media screen and (min-width: 320px) and (max-width: 625px) {
+@media screen and (min-width: 320px) and (max-width: 879px) {
     .profile {
         max-width: 282px;
-        margin: 0 auto;
         flex-direction: column;
         margin-bottom: 36px;
     }
