--- a/blocks/cards/__item-img/cards__item-img.css
+++ b/blocks/cards/__item-img/cards__item-img.css
@@ -1,5 +1,7 @@
 .cards__item-img {
-    width: 100%;
+    object-fit: cover;
+    width: 282px;
+    height: 282px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
