--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -35,3 +35,4 @@
 @import url("../blocks/popup/__content/popup__content.css");
 @import url("../blocks/popup/__content-img/popup__content-img.css");
 @import url("../blocks/popup/__content-text/popup__content-text.css");
+@import url("../blocks/popup/__container-form-error/popup__container-form-error.css");
