--- a/src/blocks/popup/__container-btn/popup__container-btn.css
+++ b/src/blocks/popup/__container-btn/popup__container-btn.css
@@ -15,6 +15,17 @@
     opacity: 0.8;
 }
 
+.popup__container-btn_disabled {
+    background-color: transparent;
+    border: 1px solid #000;
+    color: #000;
+    opacity: 0.15;
+}
+
+.popup__container-btn_disabled:hover {
+    opacity: 0.15;
+}
+
 @media screen and (min-width: 320px) and (max-width: 625px) {
     .popup__container-btn {
         font-size: 14px;
