--- a/src/blocks/popup/__container-form/popup__container-form.css
+++ b/src/blocks/popup/__container-form/popup__container-form.css
@@ -1,9 +1,9 @@
 .popup__container-form {
-    min-width: 358px;
+    max-width: 358px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 625px) {
     .popup__container-form {
-        min-width: 238px;
+        max-width: 238px;
     }
 }
