--- a/src/blocks/popup/__container-input/popup__container-input.css
+++ b/src/blocks/popup/__container-input/popup__container-input.css
@@ -22,6 +22,20 @@
     margin-bottom: 30px;
 }
 
+.popup__container-input_disabled {
+    color: #000;
+    border-bottom: 1px solid red;
+    margin-bottom: 5px;
+}
+
+.popup__container-input_disabled:first-child {
+    margin-bottom: 5px;
+}
+
+.popup__container-input_disabled::placeholder {
+    color: #C4C4C4;
+}
+
 
 @media screen and (min-width: 320px) and (max-width: 625px) {
     .popup__container-input {
